--- a/index.html
+++ b/index.html
@@ -129,12 +129,12 @@
 
 
 
-	.b-1 {background-color:#fdb8ee;}
-	.b-2 {background-color:#fdd710;}
-	.b-3 {background-color:#ff9132;}
-	.b-4 {background:black;}
-	.b-5 {background-color:#32b16a;}
-	.b-6 {background-color:#88d4ff;}
+	.b-1 {background-color:#fdb8ee;box-sizing: border-box;}
+	.b-2 {background-color:#fdd710; border-left : 5px solid black; box-sizing: border-box;}
+	.b-3 {background-color:#ff9132; border-right : 5px solid black;}
+	.b-4 {background:black; box-sizing: border-box;}
+	.b-5 {background-color:#32b16a; box-sizing: border-box;}
+	.b-6 {background-color:#88d4ff; box-sizing: border-box;}
 
 
 	.h-1 {height: 140px;}
